mobile menu css done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,158 @@
     <title>Home</title>
   </head>
   <body>
+    <header>
+      <nav class="navigation-bar">
+        <div class="container">
+          <div class="navbar-content">
+            <div class="navbar-logo">
+              <img src="/assets/img/logo head.png" alt="" />
+            </div>
+            <ul class="navbar-items">
+              <li class="dropdown">
+                <a href="">Home</a>
+                <ul class="dropdown-content">
+                  <li><a target="_blank" href="index.html">Home Page 1</a></li>
+                  <li>
+                    <a target="_blank" href="index-2.html">Home Page 2</a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="index-3.html">Home Page 3</a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="index-4.html">Home Page 4</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="">About</a>
+              </li>
+              <li class="dropdown">
+                <a href="">Course</a>
+                <ul class="dropdown-content">
+                  <li><a target="_blank" href="course.html">Course</a></li>
+                  <li>
+                    <a target="_blank" href="course-details.html"
+                      >Course Details</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="">Pages</a>
+                <ul class="dropdown-content">
+                  <li><a target="_blank" href="gallery.html">Gallery</a></li>
+                  <li><a target="_blank" href="contact.html">Contact</a></li>
+                  <li><a target="_blank" href="event.html">Event</a></li>
+                  <li>
+                    <a target="_blank" href="event-details.html"
+                      >Event Details</a
+                    >
+                  </li>
+                  <li><a target="_blank" href="faq.html">Faq</a></li>
+                  <li><a target="_blank" href="404.html">404</a></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="">Blog</a>
+                <ul class="dropdown-content">
+                  <li><a target="_blank" href="blog-1.html">Blog 1</a></li>
+                  <li><a target="_blank" href="blog-2.html">Blog 2</a></li>
+                  <li>
+                    <a target="_blank" href="blog-details-1.html"
+                      >Blog Details 1</a
+                    >
+                  </li>
+                  <li>
+                    <a target="_blank" href="blog-details-2.html"
+                      >Blog Details 2</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="">Instructor</a>
+                <ul class="dropdown-content">
+                  <li>
+                    <a target="_blank" href="instructor.html">Instructor</a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="instructor-details.html"
+                      >Instructor Details</a
+                    >
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="navbar-user">
+              <li>
+                <a href="">
+                  <i class="fas fa-shopping-cart"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fas fa-user"></i>
+                </a>
+              </li>
+            </ul>
+            <div class="menu-btn">
+              <i class="fas fa-bars"></i>
+            </div>
+          </div>
+        </div>
+        <div class="mobile-menu">
+          <div class="menu-content">
+            <div class="close-btn"><i class="fas fa-times"></i></div>
+            <div class="mobile-logo">
+              <img src="/assets/img/logo foot.png" alt="" />
+            </div>
+
+            <ul class="mobile-navbar">
+              <li class="mobile-dropdown">
+                <a href="">Home</a>
+                <span class="fa fa-angle-down"></span>
+                <ul>
+                  <li>
+                    <a href=""> Home Page 1 </a>
+                  </li>
+                  <li>
+                    <a href=""> Home Page 2 </a>
+                  </li>
+                  <li>
+                    <a href=""> Home Page 3 </a>
+                  </li>
+                  <li>
+                    <a href=""> Home Page 4 </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="">About</a>
+              </li>
+              <li class="mobile-dropdown">
+                <a href="">Course</a>
+                <span class="fa fa-angle-down"></span>
+              </li>
+              <li class="mobile-dropdown">
+                <a href="">Pages</a>
+                <span class="fa fa-angle-down"></span>
+              </li>
+              <li class="mobile-dropdown">
+                <a href="">Blog</a>
+                <span class="fa fa-angle-down"></span>
+              </li>
+              <li class="mobile-dropdown">
+                <a href="">Instructor</a>
+                <span class="fa fa-angle-down"></span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
