First section animations added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/animated-headline.css" />
+
     <title>Home</title>
   </head>
   <body>
@@ -206,7 +208,79 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section id="first">
+        <span class="first-dot-square position-absolute dot-square1"></span>
+        <span class="first-dot-square position-absolute dot-square2"></span>
+        <span class="first-dot-square position-absolute dot-square3"></span>
+        <span class="first-dot-square position-absolute dot-square4"></span>
+        <div class="banner">
+          <img class="img-fluid" src="/assets/img/section-1-img.png" alt="" />
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-7">
+              <div class="first-content">
+                <div class="subtitle">
+                  <span>During COVID-19</span>
+                  <p>We emphasize on health & sanitise issues</p>
+                </div>
+                <div class="animated-title">
+                  <h1 class="cd-headline letters scale">
+                    Gathering the brightest minds for a
+                    <span class="cd-words-wrapper" style="width: 370px">
+                      <b class="is-visible" style="opacity: 1"
+                        ><i class="in">b</i><i class="in">e</i
+                        ><i class="in">t</i><i class="in">t</i
+                        ><i class="in">e</i><i class="in">r</i
+                        ><i class="in">-</i><i class="in">w</i
+                        ><i class="in">o</i><i class="in">r</i
+                        ><i class="in">l</i><i class="in">d</i
+                        ><i class="in">.</i></b
+                      >
+                      <b style="opacity: 1"
+                        ><i class="out"> </i><i class="out">H</i
+                        ><i class="out">e</i><i class="out">l</i
+                        ><i class="out">p</i><i class="out">i</i
+                        ><i class="out">n</i><i class="out">g</i
+                        ><i class="out">-</i><i class="out">H</i
+                        ><i class="out">a</i><i class="out">n</i
+                        ><i class="out">d</i><i class="out">.</i></b
+                      >
+                      <b style="opacity: 1"
+                        ><i class="out"> </i><i class="out">M</i
+                        ><i class="out">a</i><i class="out">k</i
+                        ><i class="out">e</i><i class="out">-</i
+                        ><i class="out">I</i><i class="out">d</i
+                        ><i class="out">e</i><i class="out">a</i
+                        ><i class="out">.</i></b
+                      >
+                    </span>
+                  </h1>
+                </div>
+                <p>
+                  Collaborate Consulting exists to find the place where to being
+                  seemingly disparate interests meet. This undergraduate course
+                  teaches students what it was like.
+                </p>
+                <div class="buttons">
+                  <a href="" class="btn-usual">All Courses</a>
+                  <a
+                    href="https://www.youtube.com/watch?v=gUYjYEGbxEY"
+                    class="btn-play"
+                    ><i class="fas fa-play"></i>
+                    <span class="play-border"></span>
+                    <span class="play-border border-delay-2"></span>
+                    <span class="play-border border-delay-3"></span>
+                  </a>
+                </div>
+                <div class="background-word"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <!-- Modal -->
     <div
@@ -283,6 +357,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/animated-headline.js"></script>
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
