first section background word added

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <span class="play-border border-delay-3"></span>
                   </a>
                 </div>
-                <div class="background-word"></div>
+                <div class="background-word">Yle</div>
               </div>
             </div>
           </div>
