nice select plugin added

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <div class="banner-search">
         <div class="container">
           <div class="search">
-            <!-- <span
+            <span
               class="banner-search-shape1 position-absolute"
               data-parallax='{"x" : 70}'
               ><img src="assets/img/animated circle 1.png" alt=""
@@ -303,18 +303,45 @@
               class="banner-search-shape2 position-absolute"
               data-parallax='{"x" : -70}'
               ><img src="assets/img/animated circle 2.png" alt=""
-            /></span> -->
+            /></span>
             <form action="#">
               <div class="select-options">
-                <div class="selct-option"></div>
-                <div class="selct-option"></div>
-                <div class="selct-option"></div>
+                <div class="select-option">
+                  <select>
+                    <option data-display="Course Type">Course Type</option>
+                    <option value="1">Weekly</option>
+                    <option value="2">Monthly</option>
+                    <option value="4">Yearly</option>
+                  </select>
+                </div>
+                <div class="select-option">
+                  <select>
+                    <option value="">Langage</option>
+                    <option value="1">English</option>
+                    <option value="2">German</option>
+                    <option value="4">Spanish</option>
+                  </select>
+                </div>
+                <div class="select-option">
+                  <select>
+                    <option value="">Skill</option>
+                    <option value="1">Devloper</option>
+                    <option value="2">Designer</option>
+                    <option value="4">Marketer</option>
+                  </select>
+                </div>
               </div>
               <button type="submit" class="btn-usual">
                 <i class="fas fa-search"></i>
                 Search
               </button>
             </form>
+          </div>
+          <div class="search-text">
+            <p>
+              Are you qualified to teach our Students?
+              <a href="">Apply Now</a>
+            </p>
           </div>
         </div>
       </div>
