--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
+    />
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>Home</title>
@@ -271,6 +275,9 @@
                   <div class="buttons">
                     <a href="" class="btn-usual">All Courses</a>
                     <a
+                      data-fancybox="video"
+                      data-type="iframe"
+                      data-src="https://www.youtube.com/embed/gUYjYEGbxEY?autoplay=1"
                       href="https://www.youtube.com/watch?v=gUYjYEGbxEY"
                       class="btn-play"
                       ><i class="fas fa-play"></i>
@@ -423,6 +430,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src="/assets/js/parallax-scroll.js"></script>
     <script src="/assets/js/animated-headline.js"></script>
     <script src="/assets/js/main.js"></script>
