section title class created

--- a/index.html
+++ b/index.html
@@ -352,6 +352,18 @@
           </div>
         </div>
       </div>
+      <section id="categories">
+        <div class="container">
+          <div class="section-title text-center">
+            <p class="background-title">Categories</p>
+            <span class="section-subtitle">_ Top Categories _</span>
+            <h2 class="section-bigtitle">
+              We have many courses in our top Categories
+            </h2>
+          </div>
+          <div class="row"></div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <!-- Modal -->
