Categories section cards created

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link rel="stylesheet" href="/assets/css/flaticon.css" />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
     />
     <link rel="stylesheet" href="/assets/css/style.css" />
@@ -361,7 +366,50 @@
               We have many courses in our top Categories
             </h2>
           </div>
-          <div class="row"></div>
+          <div class="categories-slider owl-carousel owl-theme">
+            <div class="category-item">
+              <div class="category-item-header">
+                <div class="category-icon">
+                  <i class="flaticon-atom"></i>
+                </div>
+                <div class="category-text">
+                  <h4>Computer Science</h4>
+                  <span>14 Courses</span>
+                </div>
+              </div>
+              <div class="categories-item-body">
+                <img src="/assets/img/top categories 2.jpg" alt="" />
+              </div>
+            </div>
+            <div class="category-item">
+              <div class="category-item-header">
+                <div class="category-icon">
+                  <i class="flaticon-design"></i>
+                </div>
+                <div class="category-text">
+                  <h4>UI/UX Design</h4>
+                  <span>14 Courses</span>
+                </div>
+              </div>
+              <div class="categories-item-body">
+                <img src="/assets/img/top categories 3.jpg" alt="" />
+              </div>
+            </div>
+            <div class="category-item">
+              <div class="category-item-header">
+                <div class="category-icon">
+                  <i class="flaticon-global-network"></i>
+                </div>
+                <div class="category-text">
+                  <h4>Language Learning</h4>
+                  <span>14 Courses</span>
+                </div>
+              </div>
+              <div class="categories-item-body">
+                <img src="/assets/img/top categories 1.jpg" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -443,6 +491,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="/assets/js/parallax-scroll.js"></script>
     <script src="/assets/js/animated-headline.js"></script>
     <script src="/assets/js/main.js"></script>
