categories items hover actions added

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                   <span>14 Courses</span>
                 </div>
               </div>
-              <div class="categories-item-body">
+              <div class="category-item-body">
                 <img src="/assets/img/top categories 2.jpg" alt="" />
               </div>
             </div>
@@ -391,7 +391,7 @@
                   <span>14 Courses</span>
                 </div>
               </div>
-              <div class="categories-item-body">
+              <div class="category-item-body">
                 <img src="/assets/img/top categories 3.jpg" alt="" />
               </div>
             </div>
@@ -405,7 +405,7 @@
                   <span>14 Courses</span>
                 </div>
               </div>
-              <div class="categories-item-body">
+              <div class="category-item-body">
                 <img src="/assets/img/top categories 1.jpg" alt="" />
               </div>
             </div>
