categories slider owl dots style modified

--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
               <div class="category-item-body">
                 <img src="/assets/img/top categories 2.jpg" alt="" />
               </div>
+              <a href="#" class="item-hover-link">+</a>
             </div>
             <div class="category-item">
               <div class="category-item-header">
@@ -394,6 +395,7 @@
               <div class="category-item-body">
                 <img src="/assets/img/top categories 3.jpg" alt="" />
               </div>
+              <a href="#" class="item-hover-link">+</a>
             </div>
             <div class="category-item">
               <div class="category-item-header">
@@ -408,6 +410,52 @@
               <div class="category-item-body">
                 <img src="/assets/img/top categories 1.jpg" alt="" />
               </div>
+              <a href="#" class="item-hover-link">+</a>
+            </div>
+            <div class="category-item">
+              <div class="category-item-header">
+                <div class="category-icon">
+                  <i class="flaticon-atom"></i>
+                </div>
+                <div class="category-text">
+                  <h4>Computer Science</h4>
+                  <span>14 Courses</span>
+                </div>
+              </div>
+              <div class="category-item-body">
+                <img src="/assets/img/top categories 2.jpg" alt="" />
+              </div>
+              <a href="#" class="item-hover-link">+</a>
+            </div>
+            <div class="category-item">
+              <div class="category-item-header">
+                <div class="category-icon">
+                  <i class="flaticon-design"></i>
+                </div>
+                <div class="category-text">
+                  <h4>UI/UX Design</h4>
+                  <span>14 Courses</span>
+                </div>
+              </div>
+              <div class="category-item-body">
+                <img src="/assets/img/top categories 3.jpg" alt="" />
+              </div>
+              <a href="#" class="item-hover-link">+</a>
+            </div>
+            <div class="category-item">
+              <div class="category-item-header">
+                <div class="category-icon">
+                  <i class="flaticon-global-network"></i>
+                </div>
+                <div class="category-text">
+                  <h4>Language Learning</h4>
+                  <span>14 Courses</span>
+                </div>
+              </div>
+              <div class="category-item-body">
+                <img src="/assets/img/top categories 1.jpg" alt="" />
+              </div>
+              <a href="#" class="item-hover-link">+</a>
             </div>
           </div>
         </div>
